--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,5 @@
 http-server:
-  address: "localhost"                 #Адресс развёртывания HTTP сервера
+  address: "localhost"        #Адресс развёртывания HTTP сервера
   port: 8080
   timeout: 15s
   path-file-server: "./web/"  #путь до файлов фронта
@@ -16,6 +16,13 @@ mongo:
   host: "localhost"           #Адрес сервера MongoDB
   port: 27017
   dbname: ""
+
+redis:
+  host: "localhost"           #Адрес сервера Redis
+  port: 6379
+  user: "redis"
+  password: "redis"
+  db-id: 0
 
 logger:
   path: "log/log.txt"         #Путь до файла логов
